tests/errors/module-member-typo/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0100]: Name `list.lenght` is not defined.
  │
  ├─𜱶 help: did you mean `length`?
  │
3 │ def main = list.lenght
  │                 ^^^^^^
  ╰─𜱶 tests/errors/module-member-typo/main.pa:3:17
